--- a/mikrotik-share-user-multi-login.html
+++ b/mikrotik-share-user-multi-login.html
@@ -203,9 +203,9 @@
               </span>
               <div id="list-output">
                 <b>/queue simple</b><br>
-                add max-limit="<span id="simple-queue-max-limit" style="color:#ff6600;"></span>" name="<span id="simple-queue-name" style="color:#ff6600;"></span>" target="<span id="simple-queue-ip-address" style="color:#ff6600;"></span>" packet-mark="<span id="simple-queue-packet-mark" style="color:#ff6600;"></span>"<br>			
+                add max-limit="<span id="simple-queue-max-limit" style="color:#ff6600;"></span>" name="<span id="simple-queue-name" style="color:#ff6600;"></span>" target="<span id="simple-queue-ip-address" style="color:#ff6600;"></span>" packet-mark="<span id="simple-queue-packet-mark" style="color:#ff6600;"></span>" comment="Bandwidth Share by buananetpbun.github.io"<br>			
                 <b>/ip hotspot user profile</b><br>
-                add address-list="<span id="profile-address-list" style="color:#ff6600"></span>" name="<span id="profile-name" style="color:#ff6600;"></span>" shared-users="<span id="profile-shared-user" style="color:#ff6600"></span>" rate-limit="<span id="profile-rate-limit" style="color:#ff6600;"></span>"  parent-queue="<span id="profile-parent" style="color:#ff6600;"></span>" insert-queue-before="bottom"<br>
+                add address-list="<span id="profile-address-list" style="color:#ff6600"></span>" name="<span id="profile-name" style="color:#ff6600;"></span>" shared-users="<span id="profile-shared-user" style="color:#ff6600"></span>" rate-limit="<span id="profile-rate-limit" style="color:#ff6600;"></span>"  parent-queue="<span id="profile-parent" style="color:#ff6600;"></span>" insert-queue-before="bottom" comment="Bandwidth Share by buananetpbun.github.io"<br>
                 <b>/ip hotspot user</b><br>
                 add name="<span id="hotspot-username" style="color:#ff6600;"></span>" password="<span id="hotspot-password" style="color:#ff6600;"></span>" profile="<span id="hotspot-profile-name" style="color:#ff6600;"></span>" comment="<span id="hotspot-comment" style="color:#ff6600;"></span>"<br>
                 <b>/ip firewall mangle</b><br>
