--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -212,7 +212,7 @@
               </span>			
               /tool e-mail set address="<span style="color:#ff6600" id="mail-server">74.125.200.109</span>" from="<span style="color:#ff6600" id="mail-from1">Backup From Distribution</span>" password="<span style="color:#ff6600" id="mail-pass">rhcylubiwfhxycee</span>" port="<span style="color:#ff6600"  id="mail-port">587</span>" <span id="tls-option">start-tls="yes"</span> user="<span style="color:#ff6600" id="mail-user">backup.mikrotik.ros@gmail.com</span>"<br>
               /system scheduler rem [find name=BACKUP-TO-EMAIL]<br>
-              /system scheduler add interval=<span style="color:#ff6600" id="mail-interval">7d</span> name=BACKUP-TO-EMAIL on-event="#=======================================================\r\
+              /system scheduler add interval=<span style="color:#ff6600" id="mail-interval">7d</span> name=BACKUP-TO-EMAIL  on-event="#=======================================================\r\
               <br>
               \n# Mikrotik RouterOS Auto Backup to E-Mail by Buananetpbun.github.io\r\<br>
               \n#=======================================================\r\<br>
@@ -246,7 +246,7 @@
               \n/file remove (\"\$backupfilersc\" . \".rsc\")\r\<br>
               \n:delay 5s\r\<br>
               \n:log warning \"-> Backup To E-Mail Finished\"\r\<br>
-              \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup<br>
+              \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup comment="Backup To E-Mail Generator by buananetpbun.github.io"<br>
               </span>
             </div>
           </div>
