--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -232,7 +232,7 @@
               \n/file remove (\"\$backupfile\" . \".backup\")\r\<br>
               \n:delay 5s\r\<br>
               \n:log warning \"-> Backup To E-Mail Finished\"\r\<br>
-              \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup<br>
+              \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup comment="Backup To E-Mail Generator by buananetpbun.github.io"<br>
               </span>
               <span  hidden id="show-hide-rsc">
               \n:log warning \"-> Backup To E-Mail Now\"\r\<br>
