--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -200,9 +200,9 @@
               ######################################<br>
               </span>
               /interface bonding <br>
-              add name="<span style="color:#ff6600;" id='output-bonding-r1-name1'>bonding</span>" <span id="enable-arp-r1" style="display:none">link-monitoring=<span style="color:#ff6600;">arp</span> arp-ip-targets="<span style="color:#ff6600;" id='arp-ip-targets_r1'>192.168.50.2</span>"</span> mode=<span style="color:#ff6600;">balance-rr</span> slaves="<span style="color:#ff6600;" id="output-ether1-r1">ether1,</span><span style="color:#ff6600;" id="output-ether2-r1">ether2</span><span style="color:#ff6600;" id="output-ether3-r1"></span><span style="color:#ff6600;" id="output-ether4-r1"></span><span style="color:#ff6600;" id="output-ether5-r1"></span>" comment="<span style="color:#ff6600;">By BNT</span>"<br>
+              add name="<span style="color:#ff6600;" id='output-bonding-r1-name1'>bonding</span>" <span id="enable-arp-r1" style="display:none">link-monitoring=<span style="color:#ff6600;">arp</span> arp-ip-targets="<span style="color:#ff6600;" id='arp-ip-targets_r1'>192.168.50.2</span>"</span> mode=<span style="color:#ff6600;">balance-rr</span> slaves="<span style="color:#ff6600;" id="output-ether1-r1">ether1,</span><span style="color:#ff6600;" id="output-ether2-r1">ether2</span><span style="color:#ff6600;" id="output-ether3-r1"></span><span style="color:#ff6600;" id="output-ether4-r1"></span><span style="color:#ff6600;" id="output-ether5-r1"></span>" comment="<span style="color:#ff6600;">Bonding Interface Generator by buananetpbun.github.io</span>"<br>
               /ip address <br>
-              add address="<span style="color:#ff6600;" id='output-bonding-r1-ip'>192.168.50.2/24</span>" interface="<span style="color:#ff6600;" id='output-bonding-r1-name2'>bonding</span>" comment="<span style="color:#ff6600;">By BNT</span>"
+              add address="<span style="color:#ff6600;" id='output-bonding-r1-ip'>192.168.50.2/24</span>" interface="<span style="color:#ff6600;" id='output-bonding-r1-name2'>bonding</span>" comment="<span style="color:#ff6600;">Bonding Interface Generator by buananetpbun.github.io</span>"
             </div>
           </div>
           <br>
@@ -257,9 +257,9 @@
               ######################################<br>
               </span>
               /interface bonding <br>
-              add name="<span style="color:#ff6600;" id='output-bonding-r2-name1'>bonding</span>" <span id="enable-arp-r2" style="display:none">link-monitoring=<span style="color:#ff6600;">arp</span> arp-ip-targets="<span style="color:#ff6600;" id='arp-ip-targets_r2'>192.168.50.1</span>"</span> mode=<span style="color:#ff6600;">balance-rr</span> slaves="<span style="color:#ff6600;" id="output-ether1-r2">ether1,</span><span style="color:#ff6600;" id="output-ether2-r2">ether2</span><span style="color:#ff6600;" id="output-ether3-r2"></span><span style="color:#ff6600;" id="output-ether4-r2"></span><span style="color:#ff6600;" id="output-ether5-r2"></span>" comment="<span style="color:#ff6600;">By BNT</span>"<br>
+              add name="<span style="color:#ff6600;" id='output-bonding-r2-name1'>bonding</span>" <span id="enable-arp-r2" style="display:none">link-monitoring=<span style="color:#ff6600;">arp</span> arp-ip-targets="<span style="color:#ff6600;" id='arp-ip-targets_r2'>192.168.50.1</span>"</span> mode=<span style="color:#ff6600;">balance-rr</span> slaves="<span style="color:#ff6600;" id="output-ether1-r2">ether1,</span><span style="color:#ff6600;" id="output-ether2-r2">ether2</span><span style="color:#ff6600;" id="output-ether3-r2"></span><span style="color:#ff6600;" id="output-ether4-r2"></span><span style="color:#ff6600;" id="output-ether5-r2"></span>" comment="<span style="color:#ff6600;">Bonding Interface Generator by buananetpbun.github.io</span>"<br>
               /ip address <br>
-              add address="<span style="color:#ff6600;" id='output-bonding-r2-ip'>192.168.50.2/24</span>" interface="<span style="color:#ff6600;" id='output-bonding-r2-name2'>bonding</span>" comment="By BNT"
+              add address="<span style="color:#ff6600;" id='output-bonding-r2-ip'>192.168.50.2/24</span>" interface="<span style="color:#ff6600;" id='output-bonding-r2-name2'>bonding</span>" comment="<span style="color:#ff6600;">Bonding Interface Generator by buananetpbun.github.io</span>"
             </div>
           </div>
           <br>
